# visual-debugger

./: .gitignore  CMakeLists.txt  ReadMe.md
3rdlibs/: CMakeLists.txt
3rdlibs/glad/: CMakeLists.txt
3rdlibs/glad/include/glad/: glad.h
3rdlibs/glad/src/: glad.c
3rdlibs/glm/: CMakeLists.txt
3rdlibs/imgui/: CMakeLists.txt
3rdlibs/tinyfiledialogs/: CMakeLists.txt
include/: buffer.hpp  camera.hpp  fwd.hpp  geom.hpp  glerror.hpp  mesh.hpp  net.hpp  netdata.hpp  pch.hpp  renderer.hpp  shader.hpp  utility.hpp  vertex.hpp
include/app/: fwd.hpp  glhelper.hpp  image.hpp  renderer.hpp
include/debugger/: data_reader.hpp  debugger.hpp  net.hpp
shader/: frag.shader  vert.shader
src/: main.cpp  netdata.cpp  renderer.cpp
src/app/: glhelper.cpp  renderer.cpp  window.cpp
src/debugger/: bool_deserialize.cpp  bool_deserialize.hpp  file_dialog.cpp  file_dialog.hpp  main.cpp  net.cpp
src/lib/: buffer.cpp  camera.cpp  geom.cpp  netdata.cpp  renderer.cpp  shader.cpp
test/: CMakeLists.txt  client.cpp  data_send_client.cpp  packet_test.cpp  tilesheet.cpp  utility_test.cpp
utilities/: CMakeLists.txt
utilities/visual_debugger/: CMakeLists.txt  data_reader.cpp  debugger.hpp  draw_commands.hpp  main.cpp  net.cpp  net.hpp  test_data_send_client.cpp
